# altius-benchtools

./: .gitignore  CHANGELOG.md  Cargo.toml  Chinese  Hindu  README.md
.github/workflows/: ci.yml
READ.ME/: Arabic
data/: test_case_erc20.json  test_case_erc20p.json
examples/: how_to_use_profiler.rs
readmd.md/: Arabic  French  Hindu  Mandarin  Russian  spanish
scripts/: convert_erc20_to_erc20p.py  visualize.py
src/: constants.rs  lib.rs  profiler.rs  transaction_generator.rs
tests/: profiler_integration.rs
