[package]
name = "altius-benchtools"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9"
once_cell = "1.18"
serde_json = "1.0"
zip = "2.2"
clap = "4.5.20"
ethers = "2.0"
tokio = { version = "1.28", features = ["full"] }

[lib]
name = "altius_benchtools"
path = "src/lib.rs"

[[bin]]
name = "generate"
path = "src/bin/generate.rs"
