[package]
name = "altius-benchtools"
version = "0.1.0"
edition = "2021"

[features]
default = ["profiler"]
profiler = ["once_cell", "zip"]
generator = ["ethers", "tokio", "clap"]

[dependencies]
rand = "0.9"
serde_json = "1.0"
once_cell = { version = "1.18", optional = true }
zip = { version = "2.2", optional = true }
clap = { version = "4.5.20", optional = true }
ethers = { version = "2.0", optional = true }
tokio = { version = "1.28", features = ["full"], optional = true }

[lib]
name = "altius_benchtools"
path = "src/lib.rs"

[[bin]]
name = "generate"
path = "src/bin/generate.rs"
required-features = ["generator"]
