[package]
name = "altius-benchtools"
version = "0.2.1"
edition = "2021"
description = "A high-performance profiler for tracing RPC server execution"
license = "MIT OR Apache-2.0" 
authors = ["HarryGremlins <importwyf@altiuslabs.xyz>"]
repository = "https://github.com/Altius-Labs/altius-benchtools"
readme = "README.md"
keywords = ["profiler", "tracing", "benchmark", "revm", "altius"]
categories = ["development-tools::profiling"]

[features]
default = ["profiler"]
profiler = ["once_cell", "zip"]
generator = ["ethers", "tokio", "clap"]

[dependencies]
rand = "0.9"
serde_json = "1.0"
once_cell = { version = "1.18", optional = true }
zip = { version = "2.5", optional = true }
clap = { version = "4.5.20", optional = true }
ethers = { version = "2.0", optional = true }
tokio = { version = "1.28", features = ["full"], optional = true }

[lib]
name = "altius_benchtools"
path = "src/lib.rs"

[[bin]]
name = "generate"
path = "src/bin/generate.rs"
required-features = ["generator"]
